--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ ipython = "^8.29.0"
 spacy = "^3.8.3"
 pysrt = "^1.1.2"
 openai = "^1.59.8"
+google-api-python-client = "^2.160.0"
+google-auth-httplib2 = "^0.2.0"
+google-auth-oauthlib = "^1.2.1"
 
 
 [build-system]
